<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/fond2_agenda">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etTitre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_titre"
            android:inputType="text"/>

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_description"
            android:inputType="textMultiLine"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_heure_debut"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TimePicker
            android:id="@+id/timePickerDebut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_heure_fin"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TimePicker
            android:id="@+id/timePickerFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"/>

        <EditText
            android:id="@+id/etLocalisation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_localisation"
            android:inputType="text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_marqueur"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/spinnerMarqueur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonRetour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:layout_weight="1"
                android:text="@string/annuler"
                android:background="@drawable/button_style"
                android:backgroundTint="#CACCCC"/>

            <Button
                android:id="@+id/btnAjouter"
                android:layout_width="6dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:backgroundTint="#F1C98F"
                android:text="@string/ajouter_evenement" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>
